Add in project HTML

--- a/index.html
+++ b/index.html
@@ -5,5 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Page</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="linebreak"></div>
+      <div class="intro">
+        <h2 class="header">INTRO</h2>
+        <div class="content-intro">
+          <div class="image">
+            <img
+              alt="an image that matches me as a person"
+              src="https://64.media.tumblr.com/01984ed76bd82d122973ebf2662861fd/tumblr_ps679hKG1R1qeyvpto1_500.gif"
+            />
+          </div>
+          <div class="name-bio">
+            <h2 id="my_name">
+              hi, my name is
+              <span class="name-gradient">Ashraf</span>
+            </h2>
+            <p id="bio">elevate yourself.</p>
+          </div>
+        </div>
+      </div>
+      <div class="linebreak"></div>
+      <div class="two-truths">
+        <h2 class="header">2 T's 1L</h2>
+        <div class="content-tt">
+          <ul class="list">
+            <li>I love F1! (big Lewis fan)</li>
+            <li>I got my first phone at 8</li>
+            <li>I only drink <span class="water-gradient">water</span>!</li>
+          </ul>
+        </div>
+      </div>
+      <div class="linebreak"></div>
+      <div class="form">
+        <h2 class="header">FORM</h2>
+        <div class="content-form">
+          <form>
+            <div class="name-form">
+              <label id="name-label" for="name">Name</label>
+              <input
+                required
+                id="name"
+                type="text"
+                placeholder="Enter your name"
+              />
+            </div>
+            <div class="email-form">
+              <label id="email-label" for="email">Email</label>
+              <input
+                required
+                id="email"
+                type="email"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="age-form">
+              <label id="number-label" for="number">Age (optional)</label>
+              <input
+                id="number"
+                type="number"
+                min="10"
+                max="99"
+                placeholder="Age"
+              />
+            </div>
+            <div class="submit-button">
+              <input id="submit" type="submit" value="Submit" />
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="linebreak"></div>
+    </div>
+  </body>
 </html>
